# crust

./: .dockerignore  .example.env  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  readme.md
bruno/: bruno.json
bruno/udemy/: custom errors.bru  implement responder.bru  redirect.bru  response headers.bru
bruno/users/: create user.bru  delete user by id.bru  get user by id.bru  get users.bru  login.bru  paginate users.bru  update user by id.bru
migrations/: 20241023180752_create_users.sql
src/: lib.rs  main.rs  state.rs  udemy.rs  users.rs  users_create.rs  users_domain.rs  users_get_by_id.rs  users_handle_create_user.rs  users_handle_get_user_by_id.rs  users_handle_paginate_users.rs  users_handle_update_user_by_id.rs
src/health/: mod.rs
src/sessions/: hello.rs
src/settings/: mod.rs
src/users/: create.rs  delete_by_id.rs  get_by_id.rs  hello.rs  login.rs  paginate.rs  update_by_id.rs
src/utils/: passwords.rs
