[package]
name = "crust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
derive_more = { version = "1.0.0", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["bigdecimal", "chrono", "derive", "json", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
