[package]
name = "crust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.1"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["bigdecimal", "chrono", "derive", "json", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1.11.0", features = ["serde"] }
