[package]
name = "crust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.1"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["bigdecimal", "chrono", "derive", "json", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
utoipa = { version = "5.1.3", features = ["actix_extras", "debug", "chrono", "uuid", "openapi_extensions", "non_strict_integers"] }
utoipa-actix-web = "0.1.1"
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web", "reqwest"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
